--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "csv": "^5.1.1",
     "csv-parse": "^4.4.1",
+    "express": "^4.16.4",
     "stream-transform": "^2.0.0"
   }
 }
