--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "csv": "^5.1.1",
     "csv-parse": "^4.4.1",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.4",
     "stream-transform": "^2.0.0"
   }
 }
