--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
+    "vue2-dropzone": "^3.5.9",
     "webpack": "^4.30.0"
   },
   "devDependencies": {
