--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.445.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv": "^5.1.1",
+    "csv-generate": "^3.2.0",
     "csv-parse": "^4.4.1",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
+    "node-cache": "^4.2.0",
+    "redis": "^2.8.0",
     "stream-transform": "^2.0.0"
   }
 }
