--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "mix-color": "^1.0.12",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue2-dropzone": "^3.5.9",
