--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "csv-parse": "^4.4.1",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
+    "express-session": "^1.16.1",
     "node-cache": "^4.2.0",
     "redis": "^2.8.0",
     "stream-transform": "^2.0.0"
