--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "mix-color": "^1.0.12",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
+    "vue-virtual-scroll-list": "^1.3.7",
     "vue2-dropzone": "^3.5.9",
     "webpack": "^4.30.0"
   },
